# shiva

./: ChangeLog.md  LICENSE  README.md  shiva.cabal  stack.yaml  stylish-haskell.yaml
database/: setup-db.sql  setup.sql
src-ex/: Main.hs
src/Shiva/: Config.hs  Database.hs  Execute.hs  Extract.hs  Feeds.hs  Get.hs  HTML.hs  Server.hs  Sources.hs  Storage.hs  Translation.hs  Utils.hs
src/Shiva/Table/: ArticleContent.hs  ArticleMetadata.hs
static/css/: style.css
