name:                shiva
version:             0.2.0.0
synopsis:            Practice a foreign language by reading news articles.
description:         Practice a foreign language by reading news articles, with any needed
                     translations instantly available via hovering.

license:             MIT
license-file:        LICENSE
author:              Cliff Harvey
maintainer:          cs.hbar+hs@gmail.com
copyright:           2016
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

data-files:          database/setup.sql,
                     static/css/style.css,
                     static/fonts/bansheepilotblack.ttf
                     static/fonts/Sansation_Regular.ttf
                     static/fonts/Sansation_Light.ttf

library
  exposed-modules:     Shiva.Translation,
                       Shiva.Config,
                       Shiva.HTML,
                       Shiva.Extract,
                       Shiva.Server,
                       Shiva.Feeds,
                       Shiva.Database,
                       Shiva.Execute,
                       Shiva.Sources,
                       Shiva.Get,
                       Shiva.Table.ArticleMetadata,
                       Shiva.Table.ArticleContent,
                       Shiva.Storage

  other-modules:       Paths_shiva,
                       Shiva.Utils

  other-extensions:    OverloadedStrings

  build-depends:       base,
                       microsoft-translator,
                       text,
                       bytestring,
                       yaml,
                       directory,
                       mtl,
                       lucid,
                       http-conduit,
                       process,
                       tagsoup,
                       scotty,
                       wai-middleware-static,
                       xml,
                       feed,
                       regex-posix,
                       postgresql-simple,
                       containers,
                       time,
                       safe,
                       mono-traversable,
                       exceptions,
                       opaleye,
                       product-profunctors,
                       stm,
                       aeson


  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:        -Wall
                      -Wno-type-defaults

executable shiva
  hs-source-dirs:      src-ex

  main-is:             Main.hs

  build-depends:       shiva,
                       base            >=4.9  && <4.11,
                       process         >=1.4  && <1.7


  default-language:    Haskell2010
